--- a/src/css/Overview.css
+++ b/src/css/Overview.css
@@ -6,7 +6,6 @@
 }
 
 .welcome-background {
-    background-image: url('../assets/img/bulb-bg.jpg');
     background-size: cover;
     min-height: 100vh;
     color: #f5f5f5;
